Add some my recent works

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 9e14714d2e383f61abb368b03bf0754e3fac6c20
+% Commit: ed0a34926904585c67dee1850a2a5bd5e9549a13
 % Date: 2023-06-13
 % ---------------------------
 
@@ -7507,6 +7507,23 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -7520,23 +7537,6 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -12861,6 +12861,25 @@
   url		= {https://doi.org/10.1016/j.jfa.2021.109290}
 }
 
+@Article{	  chen.khoshnevisan.ea:23:central,
+  author	= {Chen, Le and Khoshnevisan, Davar and Nualart, David and
+		  Pu, Fei},
+  title		= {Central limit theorems for spatial averages of the
+		  stochastic heat equation via {M}alliavin-{S}tein's method},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {11},
+  year		= {2023},
+  number	= {1},
+  pages		= {122--176},
+  issn		= {2194-0401},
+  mrclass	= {60H15 (35K05 60F05 60H07)},
+  mrnumber	= {4563698},
+  doi		= {10.1007/s40072-021-00224-8},
+  url		= {https://doi.org/10.1007/s40072-021-00224-8}
+}
+
 @InCollection{	  chen.khoshnevisan:09:from,
   author	= {Chen, Xia and Khoshnevisan, Davar},
   title		= {From charged polymers to random walk in random scenery},
@@ -13354,6 +13373,16 @@
   mrreviewer	= {Zhong Xin Zhao},
   doi		= {10.1006/jfan.1997.3104},
   url		= {https://doi.org/10.1006/jfan.1997.3104}
+}
+
+@Article{	  chen.xia:23:asymptotic,
+  title		= {Asymptotic properties of stochastic partial differential
+		  equations in the sublinear regime},
+  author	= {Le Chen and Panqiu Xia},
+  year		= {2023},
+  month		= {June},
+  journal	= {preprint arXiv:2306.06761},
+  url		= {http://arXiv.org/abs/2306.06761}
 }
 
 @Article{	  chen.xia:23:stochastic,
@@ -18102,23 +18131,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18134,6 +18146,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -21941,20 +21970,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {II}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xviii+396},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698780}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -21965,6 +21980,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {II}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xviii+396},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698780}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -32766,25 +32795,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by space and time correlated noise},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
-  fjournal	= {Stochastic Partial Differential Equations. Analysis and
-		  Computations},
-  volume	= {5},
-  year		= {2017},
-  number	= {4},
-  pages		= {614--651},
-  issn		= {2194-0401},
-  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
-  mrnumber	= {3736656},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1007/s40072-017-0099-0},
-  url		= {https://doi.org/10.1007/s40072-017-0099-0}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by spatially correlated noise},
   journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
   fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
@@ -32799,6 +32809,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1214/16-AIHP756},
   url		= {https://doi.org/10.1214/16-AIHP756}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by space and time correlated noise},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {5},
+  year		= {2017},
+  number	= {4},
+  pages		= {614--651},
+  issn		= {2194-0401},
+  mrclass	= {60G15 (35B40 35K15 35R60 60F10 60H07 60H15 65M75)},
+  mrnumber	= {3736656},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1007/s40072-017-0099-0},
+  url		= {https://doi.org/10.1007/s40072-017-0099-0}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -45601,24 +45630,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of {L}\'{e}vy processes with
-		  drift},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {34},
-  year		= {2006},
-  number	= {3},
-  pages		= {1035--1051},
-  issn		= {0091-1798},
-  mrclass	= {60G51 (60H10)},
-  mrnumber	= {2243878},
-  mrreviewer	= {Tina M. Marquardt},
-  doi		= {10.1214/009117905000000620},
-  url		= {https://doi.org/10.1214/009117905000000620}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of one-dimensional {SDE}s
 		  driven by a fractional {B}rownian motion},
   journal	= {Statist. Probab. Lett.},
@@ -45633,6 +45644,24 @@
   mrreviewer	= {Andreas Neuenkirch},
   doi		= {10.1016/j.spl.2005.10.021},
   url		= {https://doi.org/10.1016/j.spl.2005.10.021}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of {L}\'{e}vy processes with
+		  drift},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {34},
+  year		= {2006},
+  number	= {3},
+  pages		= {1035--1051},
+  issn		= {0091-1798},
+  mrclass	= {60G51 (60H10)},
+  mrnumber	= {2243878},
+  mrreviewer	= {Tina M. Marquardt},
+  doi		= {10.1214/009117905000000620},
+  url		= {https://doi.org/10.1214/009117905000000620}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -46555,21 +46584,6 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -46585,6 +46599,21 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -49522,22 +49551,7 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@InCollection{	  perkins:82:local,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
-}
-
-@Article{	  perkins:82:local*1,
+@Article{	  perkins:82:local,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -49553,6 +49567,21 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
+}
+
+@InCollection{	  perkins:82:local*1,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -56635,6 +56664,23 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -56649,23 +56695,6 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
