Clean up my papers.

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: ed0a34926904585c67dee1850a2a5bd5e9549a13
+% Commit: 780bf2ad0e92d67a340803ee7d3e6817e862c5b0
 % Date: 2023-06-13
 % ---------------------------
 
@@ -2635,16 +2635,6 @@
   mrnumber	= {4529633},
   doi		= {10.1214/22-ecp506},
   url		= {https://doi.org/10.1214/22-ecp506}
-}
-
-@Article{	  balan.chen.ea:23:parabolic,
-  title		= {Parabolic Anderson model with rough noise in space and
-		  rough initial conditions},
-  author	= {Raluca M. Balan and Le Chen and Yiping Ma},
-  year		= {2023},
-  month		= {June},
-  journal	= {Electron. Coummu. Probab. (in process)},
-  url		= {https://www.arxiv.org/abs/2206.11361}
 }
 
 @Article{	  balan.chen:18:parabolic,
@@ -7507,23 +7497,6 @@
 @Article{	  borodin.corwin.ea:15:spectral,
   author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
 		  Sasamoto, Tomohiro},
-  title		= {Spectral theory for the {$q$}-{B}oson particle system},
-  journal	= {Compos. Math.},
-  fjournal	= {Compositio Mathematica},
-  volume	= {151},
-  year		= {2015},
-  number	= {1},
-  pages		= {1--67},
-  issn		= {0010-437X},
-  mrclass	= {82B23 (05E05)},
-  mrnumber	= {3305308},
-  doi		= {10.1112/S0010437X14007532},
-  url		= {https://doi.org/10.1112/S0010437X14007532}
-}
-
-@Article{	  borodin.corwin.ea:15:spectral*1,
-  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
-		  Sasamoto, Tomohiro},
   title		= {Spectral theory for interacting particle systems solvable
 		  by coordinate {B}ethe ansatz},
   journal	= {Comm. Math. Phys.},
@@ -7537,6 +7510,23 @@
   mrnumber	= {3385995},
   doi		= {10.1007/s00220-015-2424-7},
   url		= {https://doi.org/10.1007/s00220-015-2424-7}
+}
+
+@Article{	  borodin.corwin.ea:15:spectral*1,
+  author	= {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and
+		  Sasamoto, Tomohiro},
+  title		= {Spectral theory for the {$q$}-{B}oson particle system},
+  journal	= {Compos. Math.},
+  fjournal	= {Compositio Mathematica},
+  volume	= {151},
+  year		= {2015},
+  number	= {1},
+  pages		= {1--67},
+  issn		= {0010-437X},
+  mrclass	= {82B23 (05E05)},
+  mrnumber	= {3305308},
+  doi		= {10.1112/S0010437X14007532},
+  url		= {https://doi.org/10.1112/S0010437X14007532}
 }
 
 @Article{	  borodin.corwin.ea:16:observables,
@@ -12777,17 +12767,6 @@
   url		= {https://doi.org/10.1214/16-AIHP780}
 }
 
-@Article{	  chen.khoshnevisan.ea:20:central,
-  title		= {Central limit theorems for spatial averages of the
-		  stochastic heat equation via Malliavin-Stein's method},
-  author	= {Le Chen and Davar Khoshnevisan and David Nualart and Fei
-		  Pu},
-  year		= {2020},
-  month		= {August},
-  journal	= {Stoch. Partial Differ. Equ. Anal. Comput. (in press)},
-  url		= {http://arXiv.org/abs/2008.02408}
-}
-
 @Article{	  chen.khoshnevisan.ea:21:clt,
   author	= {Chen, Le and Khoshnevisan, Davar and Nualart, David and
 		  Pu, Fei},
@@ -14870,6 +14849,24 @@
 }
 
 @Article{	  conus.joseph.ea:13:on,
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
+  title		= {On the chaotic character of the stochastic heat equation,
+		  before the onset of intermitttency},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {41},
+  year		= {2013},
+  number	= {3B},
+  pages		= {2225--2260},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {3098071},
+  mrreviewer	= {Sergey V. Lototsky},
+  doi		= {10.1214/11-AOP717},
+  url		= {https://doi.org/10.1214/11-AOP717}
+}
+
+@Article{	  conus.joseph.ea:13:on*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {On the chaotic character of the stochastic heat equation,
@@ -14886,24 +14883,6 @@
   mrreviewer	= {Sergey V. Lototsky},
   doi		= {10.1007/s00440-012-0434-3},
   url		= {https://doi.org/10.1007/s00440-012-0434-3}
-}
-
-@Article{	  conus.joseph.ea:13:on*1,
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
-  title		= {On the chaotic character of the stochastic heat equation,
-		  before the onset of intermitttency},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {41},
-  year		= {2013},
-  number	= {3B},
-  pages		= {2225--2260},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60)},
-  mrnumber	= {3098071},
-  mrreviewer	= {Sergey V. Lototsky},
-  doi		= {10.1214/11-AOP717},
-  url		= {https://doi.org/10.1214/11-AOP717}
 }
 
 @Article{	  conus.joseph.ea:14:initial,
@@ -18131,6 +18110,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18146,23 +18142,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -28841,6 +28820,18 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -28848,18 +28839,6 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
@@ -32795,25 +32774,6 @@
 @Article{	  huang.le.ea:17:large,
   author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
   title		= {Large time asymptotics for the parabolic {A}nderson model
-		  driven by spatially correlated noise},
-  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
-  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
-		  et Statistiques},
-  volume	= {53},
-  year		= {2017},
-  number	= {3},
-  pages		= {1305--1340},
-  issn		= {0246-0203},
-  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
-  mrnumber	= {3689969},
-  mrreviewer	= {Xia Chen},
-  doi		= {10.1214/16-AIHP756},
-  url		= {https://doi.org/10.1214/16-AIHP756}
-}
-
-@Article{	  huang.le.ea:17:large*1,
-  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
-  title		= {Large time asymptotics for the parabolic {A}nderson model
 		  driven by space and time correlated noise},
   journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
   fjournal	= {Stochastic Partial Differential Equations. Analysis and
@@ -32828,6 +32788,25 @@
   mrreviewer	= {Xia Chen},
   doi		= {10.1007/s40072-017-0099-0},
   url		= {https://doi.org/10.1007/s40072-017-0099-0}
+}
+
+@Article{	  huang.le.ea:17:large*1,
+  author	= {Huang, Jingyu and L\^{e}, Khoa and Nualart, David},
+  title		= {Large time asymptotics for the parabolic {A}nderson model
+		  driven by spatially correlated noise},
+  journal	= {Ann. Inst. Henri Poincar\'{e} Probab. Stat.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e} Probabilit\'{e}s
+		  et Statistiques},
+  volume	= {53},
+  year		= {2017},
+  number	= {3},
+  pages		= {1305--1340},
+  issn		= {0246-0203},
+  mrclass	= {60G15 (60F10 60H07 60H15 65M75)},
+  mrnumber	= {3689969},
+  mrreviewer	= {Xia Chen},
+  doi		= {10.1214/16-AIHP756},
+  url		= {https://doi.org/10.1214/16-AIHP756}
 }
 
 @Article{	  huang.le:19:spatial,
@@ -45630,24 +45609,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of one-dimensional {SDE}s
-		  driven by a fractional {B}rownian motion},
-  journal	= {Statist. Probab. Lett.},
-  fjournal	= {Statistics \& Probability Letters},
-  volume	= {76},
-  year		= {2006},
-  number	= {9},
-  pages		= {907--912},
-  issn		= {0167-7152},
-  mrclass	= {60G18 (60H10)},
-  mrnumber	= {2268434},
-  mrreviewer	= {Andreas Neuenkirch},
-  doi		= {10.1016/j.spl.2005.10.021},
-  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of {L}\'{e}vy processes with
 		  drift},
   journal	= {Ann. Probab.},
@@ -45662,6 +45623,24 @@
   mrreviewer	= {Tina M. Marquardt},
   doi		= {10.1214/009117905000000620},
   url		= {https://doi.org/10.1214/009117905000000620}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of one-dimensional {SDE}s
+		  driven by a fractional {B}rownian motion},
+  journal	= {Statist. Probab. Lett.},
+  fjournal	= {Statistics \& Probability Letters},
+  volume	= {76},
+  year		= {2006},
+  number	= {9},
+  pages		= {907--912},
+  issn		= {0167-7152},
+  mrclass	= {60G18 (60H10)},
+  mrnumber	= {2268434},
+  mrreviewer	= {Andreas Neuenkirch},
+  doi		= {10.1016/j.spl.2005.10.021},
+  url		= {https://doi.org/10.1016/j.spl.2005.10.021}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -46584,6 +46563,21 @@
 
 @Article{	  nualart.sanz:85:malliavin,
   author	= {Nualart, D. and Sanz, M.},
+  title		= {Malliavin calculus for two-parameter processes},
+  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
+  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
+		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
+  number	= {3},
+  year		= {1985},
+  pages		= {73--86},
+  issn		= {0246-1501},
+  mrclass	= {60H15 (60G60 60H07)},
+  mrnumber	= {790724},
+  mrreviewer	= {M. Zakai}
+}
+
+@Article{	  nualart.sanz:85:malliavin*1,
+  author	= {Nualart, D. and Sanz, M.},
   title		= {Malliavin calculus for two-parameter {W}iener
 		  functionals},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -46599,21 +46593,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00531868},
   url		= {https://doi.org/10.1007/BF00531868}
-}
-
-@Article{	  nualart.sanz:85:malliavin*1,
-  author	= {Nualart, D. and Sanz, M.},
-  title		= {Malliavin calculus for two-parameter processes},
-  journal	= {Ann. Sci. Univ. Clermont-Ferrand II Probab. Appl.},
-  fjournal	= {Annales Scientifiques de l'Universit\'{e} de
-		  Clermont-Ferrand II. Probabilit\'{e}s et Applications},
-  number	= {3},
-  year		= {1985},
-  pages		= {73--86},
-  issn		= {0246-1501},
-  mrclass	= {60H15 (60G60 60H07)},
-  mrnumber	= {790724},
-  mrreviewer	= {M. Zakai}
 }
 
 @Article{	  nualart.sanz:89:stochastic,
@@ -49551,7 +49530,22 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@Article{	  perkins:82:local,
+@InCollection{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
+}
+
+@Article{	  perkins:82:local*1,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -49567,21 +49561,6 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
-}
-
-@InCollection{	  perkins:82:local*1,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -56664,23 +56643,6 @@
 
 @Article{	  tracy.widom:09:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On {ASEP} with step {B}ernoulli initial condition},
-  journal	= {J. Stat. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {137},
-  year		= {2009},
-  number	= {5-6},
-  pages		= {825--838},
-  issn		= {0022-4715},
-  mrclass	= {60K35 (82C22)},
-  mrnumber	= {2570751},
-  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
-  doi		= {10.1007/s10955-009-9867-1},
-  url		= {https://doi.org/10.1007/s10955-009-9867-1}
-}
-
-@Article{	  tracy.widom:09:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the distribution of a second-class particle in the
 		  asymmetric simple exclusion process},
   journal	= {J. Phys. A},
@@ -56695,6 +56657,23 @@
   mrreviewer	= {Pablo A. Ferrari},
   doi		= {10.1088/1751-8113/42/42/425002},
   url		= {https://doi.org/10.1088/1751-8113/42/42/425002}
+}
+
+@Article{	  tracy.widom:09:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On {ASEP} with step {B}ernoulli initial condition},
+  journal	= {J. Stat. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {137},
+  year		= {2009},
+  number	= {5-6},
+  pages		= {825--838},
+  issn		= {0022-4715},
+  mrclass	= {60K35 (82C22)},
+  mrnumber	= {2570751},
+  mrreviewer	= {Timo Sepp\"{a}l\"{a}inen},
+  doi		= {10.1007/s10955-009-9867-1},
+  url		= {https://doi.org/10.1007/s10955-009-9867-1}
 }
 
 @Article{	  tracy.widom:09:total,
@@ -60540,23 +60519,6 @@
 }
 
 @Article{	  zhang:09:variational,
-  author	= {Zhang, Xicheng},
-  title		= {A variational representation for random functionals on
-		  abstract {W}iener spaces},
-  journal	= {J. Math. Kyoto Univ.},
-  fjournal	= {Journal of Mathematics of Kyoto University},
-  volume	= {49},
-  year		= {2009},
-  number	= {3},
-  pages		= {475--490},
-  issn		= {0023-608X},
-  mrclass	= {60H07 (60F10)},
-  mrnumber	= {2583599},
-  doi		= {10.1215/kjm/1260975036},
-  url		= {https://doi.org/10.1215/kjm/1260975036}
-}
-
-@Article{	  zhang:09:variational*1,
   author	= {Zhang, Tusheng},
   title		= {Variational inequalities and optimization for {M}arkov
 		  processes associated with semi-{D}irichlet forms},
@@ -60572,6 +60534,23 @@
   mrreviewer	= {Arie Leizarowitz},
   doi		= {10.1137/080737630},
   url		= {https://doi.org/10.1137/080737630}
+}
+
+@Article{	  zhang:09:variational*1,
+  author	= {Zhang, Xicheng},
+  title		= {A variational representation for random functionals on
+		  abstract {W}iener spaces},
+  journal	= {J. Math. Kyoto Univ.},
+  fjournal	= {Journal of Mathematics of Kyoto University},
+  volume	= {49},
+  year		= {2009},
+  number	= {3},
+  pages		= {475--490},
+  issn		= {0023-608X},
+  mrclass	= {60H07 (60F10)},
+  mrnumber	= {2583599},
+  doi		= {10.1215/kjm/1260975036},
+  url		= {https://doi.org/10.1215/kjm/1260975036}
 }
 
 @Article{	  zhang:10:stochastic,
