--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 780bf2ad0e92d67a340803ee7d3e6817e862c5b0
+% Commit: d163901711ec5c70dc3d58435eec957a9483af40
 % Date: 2023-06-13
 % ---------------------------
 
@@ -7638,19 +7638,7 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@InCollection{	  borodin.corwin:14:macdonald,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
-}
-
-@Article{	  borodin.corwin:14:macdonald*1,
+@Article{	  borodin.corwin:14:macdonald,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -7665,6 +7653,18 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
+}
+
+@InCollection{	  borodin.corwin:14:macdonald*1,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -10549,22 +10549,6 @@
 
 @Article{	  carmona.nualart:88:random,
   author	= {Carmona, Ren\'{e} and Nualart, David},
-  title		= {Random nonlinear wave equations: propagation of
-		  singularities},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {16},
-  year		= {1988},
-  number	= {2},
-  pages		= {730--751},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35L05 35R60)},
-  mrnumber	= {929075},
-  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
-}
-
-@Article{	  carmona.nualart:88:random*1,
-  author	= {Carmona, Ren\'{e} and Nualart, David},
   title		= {Random nonlinear wave equations: smoothness of the
 		  solutions},
   journal	= {Probab. Theory Related Fields},
@@ -10579,6 +10563,22 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00318783},
   url		= {https://doi.org/10.1007/BF00318783}
+}
+
+@Article{	  carmona.nualart:88:random*1,
+  author	= {Carmona, Ren\'{e} and Nualart, David},
+  title		= {Random nonlinear wave equations: propagation of
+		  singularities},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {16},
+  year		= {1988},
+  number	= {2},
+  pages		= {730--751},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {929075},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 
 @Book{		  carmona.nualart:90:nonlinear,
@@ -13364,14 +13364,6 @@
   url		= {http://arXiv.org/abs/2306.06761}
 }
 
-@Article{	  chen.xia:23:stochastic,
-  author	= {Chen, Le and Xia, Panqiu},
-  title		= {Stochastic partial differential equations in the sublinear
-		  regime},
-  year		= {2023},
-  journal	= {Working progress}
-}
-
 @Article{	  chen.xiong:15:annealed,
   author	= {Chen, Xia and Xiong, Jie},
   title		= {Annealed asymptotics for {B}rownian motion of renormalized
@@ -14820,17 +14812,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -14848,25 +14829,18 @@
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
 }
 
-@Article{	  conus.joseph.ea:13:on,
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
-  title		= {On the chaotic character of the stochastic heat equation,
-		  before the onset of intermitttency},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {41},
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
   year		= {2013},
-  number	= {3B},
-  pages		= {2225--2260},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60)},
-  mrnumber	= {3098071},
-  mrreviewer	= {Sergey V. Lototsky},
-  doi		= {10.1214/11-AOP717},
-  url		= {https://doi.org/10.1214/11-AOP717}
+  publisher	= {Springer}
 }
 
-@Article{	  conus.joseph.ea:13:on*1,
+@Article{	  conus.joseph.ea:13:on,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {On the chaotic character of the stochastic heat equation,
@@ -14883,6 +14857,24 @@
   mrreviewer	= {Sergey V. Lototsky},
   doi		= {10.1007/s00440-012-0434-3},
   url		= {https://doi.org/10.1007/s00440-012-0434-3}
+}
+
+@Article{	  conus.joseph.ea:13:on*1,
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
+  title		= {On the chaotic character of the stochastic heat equation,
+		  before the onset of intermitttency},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {41},
+  year		= {2013},
+  number	= {3B},
+  pages		= {2225--2260},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {3098071},
+  mrreviewer	= {Sergey V. Lototsky},
+  doi		= {10.1214/11-AOP717},
+  url		= {https://doi.org/10.1214/11-AOP717}
 }
 
 @Article{	  conus.joseph.ea:14:initial,
@@ -18110,23 +18102,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -18142,6 +18117,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -20484,21 +20476,6 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -20511,6 +20488,21 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -21949,6 +21941,20 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {II}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xviii+396},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698780}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -21959,20 +21965,6 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {II}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xviii+396},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698780}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -28820,18 +28812,6 @@
   author	= {Hairer, Martin},
   title		= {Singular stochastic {PDE}s},
   booktitle	= {Proceedings of the {I}nternational {C}ongress of
-		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
-  pages		= {49--73},
-  publisher	= {Kyung Moon Sa, Seoul},
-  year		= {2014},
-  mrclass	= {60H15 (81S20 82C28)},
-  mrnumber	= {3727602}
-}
-
-@InProceedings{	  hairer:14:singular*1,
-  author	= {Hairer, Martin},
-  title		= {Singular stochastic {PDE}s},
-  booktitle	= {Proceedings of the {I}nternational {C}ongress of
 		  {M}athematicians---{S}eoul 2014. {V}ol. 1},
   pages		= {685--709},
   publisher	= {Kyung Moon Sa, Seoul},
@@ -28839,6 +28819,18 @@
   mrclass	= {60H15 (81S20 82C28)},
   mrnumber	= {3728488},
   mrreviewer	= {Peter Karl Friz}
+}
+
+@InProceedings{	  hairer:14:singular*1,
+  author	= {Hairer, Martin},
+  title		= {Singular stochastic {PDE}s},
+  booktitle	= {Proceedings of the {I}nternational {C}ongress of
+		  {M}athematicians---{S}eoul 2014. {V}ol. {IV}},
+  pages		= {49--73},
+  publisher	= {Kyung Moon Sa, Seoul},
+  year		= {2014},
+  mrclass	= {60H15 (81S20 82C28)},
+  mrnumber	= {3727602}
 }
 
 @InCollection{	  hairer:14:solving,
@@ -44269,7 +44261,21 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Article{	  nane:06:iterated*1,
+@Book{		  nane:06:iterated*1,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2006},
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
+}
+
+@Article{	  nane:06:iterated*2,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -44286,20 +44292,6 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
-}
-
-@Book{		  nane:06:iterated*2,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
-  year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -56893,23 +56885,6 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -56924,6 +56899,23 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
